--- a/readme.adoc
+++ b/readme.adoc
@@ -12,7 +12,13 @@ pip install imutils
 pip install scikit-image
 ----
 
+== Why haven’t we applied deep learning object detection to find the license plate? Wouldn’t that be easier?”
+[quote]
+While that is perfectly acceptable, it is a lot of work to train such an object detector on your own. We’re talking requires countless hours to annotate thousands of images in your dataset.
+
+But we didn’t have the luxury of a dataset in the first place, so the method we’ve developed so far relies on so-called “traditional” image processing techniques.
+
 == References
 
-Tessaract env setup
-https://www.pyimagesearch.com/2018/09/17/opencv-ocr-and-text-recognition-with-tesseract/
+Pyimagesearch
+https://www.pyimagesearch.com/2020/09/21/opencv-automatic-license-number-plate-recognition-anpr-with-python/
